# suano

./: APP_STORE_PUBLISHING_GUIDE.md  LICENSE  README.md
AIHelper/: AIHelper.entitlements  AIService.swift  AppDelegate.swift  Info.plist  KeychainService.swift  PopupController.swift  PopupPanelView.swift  ShortcutSettingsView.swift
AIHelper.xcodeproj/: project.pbxproj
docs/: PRIVACY.html
linux/: README.md  aihelper.desktop  aihelper.py  install.sh  requirements.txt  uninstall.sh
linux-rust/: Cargo.toml  README.md  install.sh  uninstall.sh
linux-rust/src/: ai_service.rs  clipboard.rs  main.rs  popup.rs  settings.rs  settings_window.rs  tray.rs
linux/aihelper/: __init__.py  ai_service.py  clipboard_manager.py  hotkey_manager.py  keyring_service.py  main.py  popup_window.py  settings_store.py  settings_window.py
macos/: APP_STORE_PUBLISHING_GUIDE.md  Makefile  README.md
macos/AIHelper/: AIHelperApp.swift  AIService.swift  HotkeyManager.swift  KeychainService.swift  MarkdownRenderer.swift  PopupController.swift  PopupPanelView.swift  ShortcutSettingsView.swift  ShortcutStore.swift  SuggestionViewModel.swift
macos/AIHelper.xcodeproj/: project.pbxproj
macos/AIHelper.xcodeproj/xcshareddata/xcschemes/: AIHelper.xcscheme
macos/Suano/: AIService.swift  AppDelegate.swift  HotkeyManager.swift  Info.plist  KeychainService.swift  MarkdownRenderer.swift  PopupController.swift  PopupPanelView.swift  ShortcutSettingsView.swift  ShortcutStore.swift  SuanoApp.swift  SuggestionViewModel.swift
macos/Suano.xcodeproj/: project.pbxproj
(+1 files in other folders)
