[package]
name = "aihelper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aihelper"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
glib = "0.20"
gio = "0.20"
libsecret = "0.7"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
ashpd = { version = "0.13", features = ["tokio", "global_shortcuts"] }
zbus = { version = "5", features = ["tokio"] }
ksni = { version = "0.3.4", features = ["blocking"] }
